fix: Update tests

--- a/async/BUILD
+++ b/async/BUILD
@@ -2,10 +2,13 @@ cc_binary(
   name = "async-test",
 
   srcs = [
-    "async_test.cc", "test_timer.h"
+    "async_test.cc",
+    "server.cc",
+    "server.h",
+    "test_timer.h",
   ],
   deps = [
-    "@boost//:filesystem", "@boost//:asio"
+    "@boost//:asio"
   ],
   data = ["//data:1G.dummy"],
 )
