fix : Update test

--- a/client/BUILD
+++ b/client/BUILD
@@ -1,11 +1,20 @@
+load(
+  "//:copts/configure_copts.bzl",
+  "ASYNC_TEST_DEFAULT_COPTS"
+)
+
 cc_binary(
-  name = "tcp-client",
+  name = "client",
 
   srcs = [
     "client.cc", "client.h"
   ],
+
   deps = [
     "@boost//:asio"
   ],
+
   data = ["//data:1G.dummy"],
+
+  copts = ASYNC_TEST_DEFAULT_COPTS,
 )
