--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,6 +1,10 @@
 module(name = "async-test")
 
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_cc", version = "0.1.0")
+bazel_dep(name = "platforms", version = "0.0.10")
+
+bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
 
 # Hedron's Compile Commands Extractor for Bazel
 # https://github.com/hedronvision/bazel-compile-commands-extractor
@@ -8,7 +12,7 @@ bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
 git_override(
     module_name = "hedron_compile_commands",
     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
-    commit = "4f28899228fb3ad0126897876f147ca15026151e",
+    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
     # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
     # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
 )
@@ -31,3 +35,5 @@ use_repo(
     non_module_boost_repositories,
     "boost",
 )
+
+bazel_dep(name = "libuv", version = "1.48.0")
